CMAKE_MINIMUM_REQUIRED( VERSION 3.5 )

message("============ ${CURRENT_FOLDER}")
STRING( REGEX REPLACE ".*/(.*)" "\\1" CURRENT_FOLDER ${CMAKE_CURRENT_SOURCE_DIR} )
message("name =" ${CURRENT_FOLDER})
project(${CURRENT_FOLDER}  VERSION 0.1 LANGUAGES CXX)
message("============ ${CURRENT_FOLDER}")

SET( QT_VERSION_MAJOR 6 )
SET( DEPLOY_QT_HOME "C:/Qt/6.4.2/msvc2019_64/" )
SET( Qt6_DIR "${DEPLOY_QT_HOME}/lib/cmake/Qt6" )
SET( Qt6CoreTools_DIR "${DEPLOY_QT_HOME}/lib/cmake/Qt6CoreTools")
SET( OpenCV_DIR "C:/libs/opencv/build/")
SET( Qt6GuiTools_DIR "${DEPLOY_QT_HOME}/lib/cmake/Qt6GuiTools" )

SET( CMAKE_C_STANDARD 99 )
SET( CMAKE_C_STANDARD_REQUIRED ON )
SET( CMAKE_C_VISIBILITY_PRESET hidden )

SET( CMAKE_CXX_STANDARD 17 )
SET( CMAKE_CXX_STANDARD_REQUIRED ON )
SET( CMAKE_CXX_VISIBILITY_PRESET hidden )

INCLUDE( GenerateExportHeader )
INCLUDE( GNUInstallDirs )


SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/${CMAKE_INSTALL_BINDIR} )
SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR} )
SET( CMAKE_INSTALL_BINDIR ./)
SET( CMAKE_INSTALL_LIBDIR ./)
SET( CMAKE_INSTALL_PREFIX ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} )
SET( EXECUTABLE_OUTPUT_PATH ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} )

SET( CMAKE_AUTOUIC ON )
SET( CMAKE_AUTOMOC ON )
SET( CMAKE_AUTORCC ON )

ADD_SUBDIRECTORY( src/libs/processArgs )
ADD_SUBDIRECTORY( src/libs/processPath )
ADD_SUBDIRECTORY( src/libs/typeFile )
ADD_SUBDIRECTORY( src/libs/typeSql )
ADD_SUBDIRECTORY( src/libs/bitConver )

ADD_SUBDIRECTORY( src/consoles/moveFile )
ADD_SUBDIRECTORY( src/consoles/createFileTemplates )
ADD_SUBDIRECTORY( src/consoles/pathInfo )

ADD_SUBDIRECTORY( src/uis/editResources )
ADD_SUBDIRECTORY( src/uis/showCamera )


